--- a/RouteFinder/RouteFinder.vcxproj.filters
+++ b/RouteFinder/RouteFinder.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="SubwayLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SubwayPrinter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ObjectvilleSubway.txt">
